FIX Badge margin is moved to the text to allow it to break lines nicely on mobile

--- a/client/src/components/HistoryViewer/HistoryViewer.scss
+++ b/client/src/components/HistoryViewer/HistoryViewer.scss
@@ -27,8 +27,8 @@
   position: relative;
 }
 
-.history-viewer__version-state .badge {
-  margin-left: 10px;
+.history-viewer__version-state .text-muted {
+  margin-right: 10px;
 }
 
 .table .history-viewer__row--current {
